src/test/ui/const-generics/sneaky-array-repeat-expr.stderr
error: constant expression depends on a generic parameter
  --> $DIR/sneaky-array-repeat-expr.rs:11:20
   |
LL |     let bar = [(); <()>::Assoc];
   |                    ^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: failed to evaluate the given constant
  --> $DIR/sneaky-array-repeat-expr.rs:11:20
   |
LL |     let bar = [(); <()>::Assoc];
   |                    ^^^^^^^^^^^

error: constant expression depends on a generic parameter
  --> $DIR/sneaky-array-repeat-expr.rs:26:21
   |
LL |     let bar2 = [(); <()>::Assoc2];
   |                     ^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: failed to evaluate the given constant
  --> $DIR/sneaky-array-repeat-expr.rs:26:21
   |
LL |     let bar2 = [(); <()>::Assoc2];
   |                     ^^^^^^^^^^^^

error: aborting due to 4 previous errors

